tests/NormalTests/paczka1/small_fuzzy/91248495.err
Error in line 4: A28 A398 361,3
Error in line 5: A28 A764 83,8
Error in line 9: C7pIEOj A398 63,2
Error in line 11: IGct A764 15,3
